--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ body{
 }
 .popular__container{
     display: flex;
-    justify-content: space-between;
+    /*justify-content: space-between;*/
     flex-wrap: wrap;
     margin: 10px;
 
