--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ body{
 .popular__container{
     display: flex;
     /*justify-content: space-between;*/
-    flex-wrap: wrap;
+   /* flex-wrap: wrap;*/
     margin: 10px;
 
 }
