--- a/style.css
+++ b/style.css
@@ -79,6 +79,9 @@ body{
     width: 100%;
     height: 50%;
     justify-content: space-between;
+    flex basis: 25%;
+
+
 }
 .topics{
     padding: 10px;
